:feat: refactoring MediaServiceImpl